--- a/index.html
+++ b/index.html
@@ -46,19 +46,17 @@
       left: 0;
       width: 100%;
       text-align: center;
-      background-color: rgba(0, 0, 0, 0.7); /* transparent black */
+      background-color: rgba(0, 0, 0, 0.7);
       color: white;
       font-family: 'Courier New';
       font-size: 16px;
       padding: 10px;
       opacity: 0.3;
       transition: opacity 0.4s ease;
-      pointer-events: none;
     }
 
     #monthly-message:hover {
       opacity: 1;
-      pointer-events: auto;
     }
 
     #controls {
