--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
       position: fixed;
       bottom: 0;
       left: 0;
-      width: 100%;
+      max-width: 100%;
       text-align: center;
       background-color: rgba(0, 0, 0, 0.7);
+      border: 0.6px;
       color: white;
       font-family: 'Courier New';
       font-size: 16px;
