--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
   
   <audio id="bg-audio" autoplay loop muted>
-      <source src="audio/themev4.wav" type="audio/wav">
+      <source src="audio/theme.wav" type="audio/wav">
   </audio>
   
   <div id="countdown"></div>
