--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       left: 0;
       max-width: 100%;
       background-color: rgba(0, 0, 0, 0.9);
-      border: 0.6px;
+      border: 1px;
+      
       color: white;
       font-family: 'Courier New';
       font-size: 16px;
@@ -120,6 +121,7 @@
 </body>
 
 <script>
+    //cells
     const NUM_IMAGES = 23;
     const GREEN_PATH = "cells/";
     const RED_PATH = "red_cells/";
@@ -141,14 +143,14 @@
     function createCell() {
       const img = document.createElement("img");
 
-    // Decide red or green
+    //cell-gradient
     const isRed = Math.random() < redRatio;
     const path = isRed ? RED_PATH : GREEN_PATH;
     const imgName = IMAGE_NAMES[Math.floor(Math.random() * IMAGE_NAMES.length)];
     img.src = path + imgName;
     img.className = "cell";
 
-    // Special size for cell_1.png
+    //cell-original
     if (imgName === 'cell_1.png') {
       img.style.width = '100px';
     } else {
@@ -157,7 +159,7 @@
     }
     img.style.height = "auto";
 
-    // Clustering logic
+    //cluster
     const angle = Math.random() * 2 * Math.PI;
     const radius = (1 - clusteringFactor) * (Math.random() * screenWidth / 2.5);
     const centerX = screenWidth / 2;
@@ -181,7 +183,7 @@
     document.body.appendChild(img);
   }
 
-  // Create all cells
+  //create cells
   for (let i = 0; i < numberOfCells; i++) {
     createCell();
   }
@@ -214,24 +216,27 @@
       const month = now.getMonth();
       const day = now.getDate();
 
-       const message = messages[month];
-      if (message && day <= 14) {
-        document.getElementById("monthly-message").textContent = message;
-      }
+      //const message = messages[month];
+      //if (message && day <= 14) {
+      //  document.getElementById("monthly-message").textContent = message;
+      //}
 
-      //const message = messages[month] || "";
-      //document.getElementById("monthly-message").textContent = message;
+      const message = messages[month] || "";
+      document.getElementById("monthly-message").textContent = message;
 
+  
+      let isMuted = true;
+  
+      //audio-theme
       const audio = document.getElementById("bg-audio");
       const toggleLink = document.getElementById("mute-toggle");
 
-      // Ensure audio starts muted if autoplay is needed
       audio.volume = 0;
 
       toggleLink.addEventListener("click", function (e) {
         e.preventDefault();
 
-        // Only attempt to play when the user clicks
+    
         if (audio.paused) {
           audio.play().catch(err => {
             console.error("Playback failed:", err);
@@ -249,6 +254,30 @@
         }
       });
 
+    //audio-samples  
+    const soundSamples = [
+      '/audio/sample1.wav',
+      '/audio/sample2.wav',
+    ];
+
+    function playRandomSound() {
+      const audio = new Audio(soundSamples[Math.floor(Math.random() * soundSamples.length)]);
+      audio.volume = 0.6; // adjust if needed
+      audio.play();
+    }
+
+    function scheduleRandomPlayback() {
+      const nextDelay = Math.random() * (7 - 4) * 60 * 1000 + 4 * 60 * 1000; // 4-7 mins
+      setTimeout(() => {
+        playRandomSound();
+        scheduleRandomPlayback(); // schedule next
+      }, nextDelay);
+    }
+
+    scheduleRandomPlayback(); // start the loop
+  
+
+    //menu
     const aboutToggle = document.getElementById("about-toggle");
     const aboutContent = document.getElementById("about-content");
     let isContentLoaded = false;
