--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
   
   <audio id="bg-audio" autoplay loop muted>
-      <source src="audio/theme.wav" type="audio/wav">
+      <source src="audio/theme.mp3" type="audio/wav">
   </audio>
   
   <div id="countdown"></div>
