--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       const diffTime = target - today;
       const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 
-      document.getElementById('countdown').textContent = `${diffDays}ish days until the apple is ripe!`;
+      document.getElementById('countdown').textContent = `${diffDays}-ish days until the apple is ripe!`;
     }
 
     updateCountdown();
@@ -261,9 +261,11 @@
     ];
 
     function playRandomSound() {
-      const audio = new Audio(soundSamples[Math.floor(Math.random() * soundSamples.length)]);
-      audio.volume = 0.6; // adjust if needed
-      audio.play();
+      if (isMuted) return;
+
+      const sample = new Audio(soundSamples[Math.floor(Math.random() * soundSamples.length)]);
+      sample.volume = 0.6;
+      sample.play();
     }
 
     function scheduleRandomPlayback() {
@@ -287,8 +289,8 @@
       const isVisible = aboutContent.style.display === "block";
   
       if (isVisible) {
-    aboutContent.style.display = "none";
-    aboutToggle.style.opacity = 1;
+        aboutContent.style.display = "none";
+        aboutToggle.style.opacity = 1;
       } else {
         if (!isContentLoaded) {
           fetch('README.md?nocache=' + Date.now())
