--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
       max-width: 100%;
       background-color: rgba(0, 0, 0, 0.9);
       border: 1px;
-      
       color: white;
       font-family: 'Courier New';
       font-size: 16px;
       padding: 10px;
       opacity: 0.3;
       transition: opacity 0.4s ease;
+      z-index: 1000;
     }
 
     #monthly-message:hover {
