--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
   
   <audio id="bg-audio" autoplay loop muted>
-      <source src="audio/theme.mp3" type="audio/wav">
+      <source src="audio/theme.mp3" type="audio/mp3">
   </audio>
 
   <div id="monthly-message"></div>
