--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
 
     //developmental-facts 
     const messages = {
-        4: "There’s a distinct change to the fruiting structures, the brighter red colouring of the ovaries at the base of the stigma. And the hypanthium – that develops into the ‘fleshy’ part of the apple, the part we actually eat - has just begun to swell.",
-        5: "The fertilised ovaries, in which the apple’s five seeds will develop, are now encased in the growing hypanthium, which will continue to grow and eventually ripen to become a deliciously edible apple fruit.",
-        6: "Fruitlets are developing into full-sized apples throughout the tree. As the heat of summer strengthens, our subject apple continues to grow and develop very nicely.",
+        4: "There’s a distinct change to the fruit: the brighter red colour at the base of the stigma. And the hypanthium – that develops into the ‘fleshy’ part of the apple, the part we actually eat - has just begun to swell.",
+        5: "The fertilised ovaries, in which the apple’s seeds will develop, are now encased in the growing hypanthium, which will continue to grow and eventually ripen to become a delicious apple fruit.",
+        6: "The applet is developing into a full-sized fruit on the tree. As the heat of summer strengthens, our subject apple continues to grow and develop nicely.",
         7: "At this point, the weight of the growing fruit is just beginning to bend the pedicle, the short ‘stem’ that connects the apple fruit to the tree, downwards.",
-        8: "The apple continued to ripen in the autumn sunshine. A few heat- and/or insect-damaged leaves, that no longer have much use for photosynthesis and so drain on the tree’s resources, drop off."
+        8: "The applet continued to ripen in the autumn sunshine. A few heat- and/or insect-damaged leaves, no longer useful for photosynthesis and a drain on the tree’s resources, drop off."
       };
 
       const now = new Date();
