--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
         left: 10px;
         right: 10px;
         max-height: 70%;
+        max-width: 300px;
         overflow-y: auto;
         background-color: rgba(0, 0, 0, 0.85);
         color: white;
